dnl Process this file with autoconf to produce a configure script.
AC_INIT(xgraph.c)
AM_INIT_AUTOMAKE(xgraph,12.1)

AM_CONFIG_HEADER(autoconf.h)

AM_WITH_DMALLOC

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_PATH_XTRA

dnl check header files.
AC_CHECK_HEADERS(float.h limits.h stdlib.h string.h strings.h unistd.h)

dnl checks for typedefs
dnl checks for structures
dnl checks for compiler characteristics

dnl checks for library functions
AC_CHECK_FUNCS(strcasecmp)

dnl checks for system services

AC_ARG_WITH(additional-includes, --with-additional-includes=path, ADDITIONAL_INCLUDES=$withval,ADDITIONAL_INCLUDES="")
AC_ARG_WITH(additional-libs, --with-additional-libs=path, ADDITIONAL_LIBS=$withval,ADDITIONAL_LIBS="")
AC_SUBST(ADDITIONAL_INCLUDES)
AC_SUBST(ADDITIONAL_LIBS)


AC_OUTPUT([Makefile])

