dnl Process this file with autoconf to produce a configure script.
dnl configure.in script for xgraph package
dnl

AC_INIT
AC_CONFIG_SRCDIR([xgraph.c])
AM_INIT_AUTOMAKE(xgraph,12.1)

AC_CONFIG_HEADERS([autoconf.h])

AM_WITH_DMALLOC

dnl Enable maintainer commands only if requested
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_PATH_XTRA

dnl check header files.
AC_CHECK_HEADERS(float.h limits.h stdlib.h string.h strings.h unistd.h)

dnl checks for typedefs
dnl checks for structures
dnl checks for compiler characteristics

dnl checks for library functions
AC_CHECK_FUNCS(strcasecmp)

dnl checks for system services

AC_ARG_WITH(additional-includes, --with-additional-includes=path, ADDITIONAL_INCLUDES=$withval,ADDITIONAL_INCLUDES="")
AC_ARG_WITH(additional-libs, --with-additional-libs=path, ADDITIONAL_LIBS=$withval,ADDITIONAL_LIBS="")
AC_SUBST(ADDITIONAL_INCLUDES)
AC_SUBST(ADDITIONAL_LIBS)


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

