## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libfte.a

libfte_a_SOURCES = \
		agraf.c		\
		agraf.h		\
		arg.c		\
		arg.h		\
		aspice.c	\
		aspice.h	\
		breakp.c	\
		breakp.h	\
		breakp2.c	\
		breakp2.h	\
		circuits.c	\
		circuits.h	\
		clip.c		\
		clip.h		\
		compose.c	\
		compose.h	\
		cpitf.c		\
		cpitf.h		\
		debugcom.c	\
		debugcom.h	\
		define.c	\
		define.h	\
		device.c	\
		device.h	\
		diff.c		\
		diff.h		\
		dimens.c	\
		dimens.h	\
		display.c	\
		display.h	\
		doplot.c	\
		doplot.h	\
		dotcards.c	\
		dotcards.h	\
		error.c		\
		error.h		\
		evaluate.c	\
		evaluate.h	\
		fourier.c	\
		fourier.h	\
		gens.c		\
		gens.h		\
		graf.c		\
		graf.h		\
		graphdb.c	\
		graphdb.h	\
		grid.c		\
		grid.h		\
		inp.c		\
		inp.h		\
		inpcom.c	\
		inpcom.h	\
		interp.c	\
		interp.h	\
		linear.c	\
		linear.h	\
		misccoms.c	\
		misccoms.h	\
		miscvars.c	\
		miscvars.h	\
		mw_coms.c	\
		mw_coms.h	\
		newcoms.c	\
		newcoms.h	\
		nutctab.c	\
		nutctab.h	\
		nutinp.c	\
		nutinp.h	\
		nutmegif.c	\
		nutmegif.h	\
		options.c	\
		options.h	\
		outitf.c	\
		outitf.h	\
		parse.c		\
		parse.h		\
		plot5.c		\
		plot5.h		\
		plotcurv.c	\
		plotcurv.h	\
		points.c	\
		points.h	\
		postcoms.c	\
		postcoms.h	\
		postsc.c	\
		postsc.h	\
		rawfile.c	\
		rawfile.h	\
		resource.c	\
		resource.h	\
		runcoms.c	\
		runcoms.h	\
		runcoms2.c	\
		runcoms2.h	\
		shyu.c		\
		shyu.h		\
		signal_handler.c\
		signal_handler.h\
		spec.c		\
		spec.h		\
		spcmdtab.c	\
		spiceif.c	\
		spiceif.h	\
		subckt.c	\
		subckt.h	\
		typesdef.c	\
		typesdef.h	\
		vectors.c	\
		vectors.h	\
		where.c		\
		where.h		\
		x11.c		\
		x11.h		\
		xgraph.c	\
		xgraph.h




INCLUDES = -I$(top_srcdir)/src/include @X_CFLAGS@ 

MAINTAINERCLEANFILES = Makefile.in
