## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	acdefs.h	\
	arch.h		\
	cktdefs.h	\
	complex.h	\
	const.h		\
	cpdefs.h	\
	cpextern.h	\
	cpstd.h		\
	defines.h	\
	devdefs.h	\
	dgen.h		\
	distodef.h	\
	ftecmath.h	\
	fteconst.h	\
	ftedata.h	\
	ftedbgra.h	\
	ftedebug.h	\
	ftedefs.h	\
	ftedev.h	\
	fteext.h	\
	ftegraf.h	\
	ftegraph.h	\
	ftehelp.h	\
	fteinp.h	\
	fteinput.h	\
	fteparse.h	\
	gendefs.h	\
	hlpdefs.h	\
	iferrmsg.h	\
	ifsim.h		\
	inpdefs.h	\
	inpmacs.h	\
	inpptree.h	\
	jobdefs.h	\
	macros.h	\
	missing_math.h	\
	ngspice.h	\
	noisedef.h	\
	opdefs.h	\
	optdefs.h	\
	pzdefs.h	\
	sen2defs.h	\
	sensdefs.h	\
	sensgen.h	\
	smpdefs.h	\
	spconfig.h	\
	sperror.h	\
	spmatrix.h	\
	struct.h	\
	suffix.h	\
	tfdefs.h	\
	trandefs.h	\
	trcvdefs.h	\
	tskdefs.h	

MAINTAINERCLEANFILES = Makefile.in
