## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	acdefs.h \
	bool.h \
	cktdefs.h \
	complex.h \
	const.h \
	cpdefs.h \
	cpextern.h \
	cpstd.h \
	defines.h \
	devdefs.h \
	dgen.h \
	distodef.h \
	dvec.h \
	ftedbgra.h \
	ftedebug.h \
	ftedefs.h \
	ftedev.h \
	fteext.h \
	fteinp.h \
	fteinput.h \
	fteparse.h \
	gendefs.h \
	graph.h \
	grid.h \
	hlpdefs.h \
	iferrmsg.h \
	ifsim.h \
	inpdefs.h \
	inpmacs.h \
	inpptree.h \
	jobdefs.h \
	macros.h \
	memory.h \
	missing_math.h \
	ngspice.h \
	noisedef.h \
	opdefs.h \
	optdefs.h \
	plot.h \
	pnode.h \
	pzdefs.h \
	sen2defs.h \
	sensdefs.h \
	sensgen.h \
	sim.h \
	smpdefs.h \
	sperror.h \
	spmatrix.h \
	suffix.h \
	terminal.h \
	tfdefs.h \
	trandefs.h \
	trcvdefs.h \
	tskdefs.h \
	wordlist.h

MAINTAINERCLEANFILES = Makefile.in
