## Process this file with automake to produce Makefile.in
## $Id$

noinst_HEADERS = 	\
	acdefs.h 	\
	bdrydefs.h	\
	bool.h 		\
	carddefs.h	\
	ciderinp.h	\
	cidersupt.h	\
	cktdefs.h 	\
	cluster.h	\
	cmconstants.h	\
	cm.h		\
	cmproto.h	\
	cmtypes.h	\
	complex.h 	\
	const.h 	\
	contdefs.h	\
	cpdefs.h 	\
	cpextern.h 	\
	cpstd.h 	\
	defines.h 	\
	devdefs.h 	\
	dgen.h 		\
	distodef.h 	\
	dllitf.h	\
	domndefs.h	\
	dopdefs.h	\
	dvec.h 		\
	elctdefs.h	\
	enh.h		\
	evt.h		\
	evtproto.h	\
	evtudn.h	\
	ftedbgra.h 	\
	ftedebug.h 	\
	ftedefs.h 	\
	ftedev.h 	\
	fteext.h 	\
	fteinp.h 	\
	fteinput.h 	\
	fteparse.h 	\
	gendefs.h 	\
	gendev.h	\
	graph.h 	\
	grid.h 		\
	hlpdefs.h 	\
	iferrmsg.h 	\
	ifsim.h 	\
	inpdefs.h 	\
	inpmacs.h 	\
	inpptree.h 	\
	ipc.h		\
	ipcproto.h	\
	ipctiein.h	\
	jobdefs.h 	\
	lsort.h		\
	macros.h 	\
	material.h	\
	matldefs.h	\
	memory.h	\
	meshdefs.h	\
	meshext.h	\
	methdefs.h	\
	mifcmdat.h	\
	mifdefs.h	\
	mif.h		\
	mifparse.h	\
	mifproto.h	\
	miftypes.h	\
	missing_math.h 	\
	mobdefs.h	\
	modldefs.h	\
	multi_line.h	\
	ngspice.h 	\
	noisedef.h 	\
	numcards.h	\
	numconst.h	\
	numenum.h	\
	numgen.h	\
	numglobs.h	\
	onedev.h	\
	onemesh.h	\
	opdefs.h 	\
	optdefs.h 	\
	optndefs.h	\
	outpdefs.h	\
	plot.h 		\
	pnode.h 	\
	profile.h	\
	pzdefs.h 	\
	sen2defs.h 	\
	sensdefs.h 	\
	sensgen.h 	\
	sim.h 		\
	smpdefs.h 	\
	sperror.h 	\
	spmatrix.h 	\
	suffix.h 	\
	swec.h		\
	tfdefs.h 	\
	trandefs.h 	\
	trcvdefs.h 	\
	tskdefs.h 	\
	twodev.h	\
	twomesh.h	\
	wordlist.h	\
	wstdio.h

MAINTAINERCLEANFILES = Makefile.in
