## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libparser.a

libparser_a_SOURCES = \
		alias.c		\
		alias.h		\
		backq.c		\
		backq.h		\
		complete.c	\
		complete.h	\
		cshpar.c	\
		cshpar.h	\
		front.c		\
		front.h		\
		glob.c		\
		glob.h		\
		history.c	\
		history.h	\
		input.c		\
		input.h		\
		lexical.c	\
		lexical.h	\
		modify.c	\
		modify.h	\
		numparse.c	\
		numparse.h	\
		output.c	\
		output.h	\
		quote.c		\
		quote.h		\
		std.c		\
		unixcom.c	\
		unixcom.h	\
		variable.c	\
		variable.h	\
		var2.c		\
		var2.h		\
		wlist.c		\
		wlist.h	


INCLUDES = -I$(top_srcdir)/src/include
MAINTAINERCLEANFILES = Makefile.in
