## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libparser.a

libparser_a_SOURCES = \
		backq.c		\
		backq.h		\
		complete.c	\
		complete.h	\
		cshpar.c	\
		cshpar.h	\
		glob.c		\
		glob.h		\
		input.c		\
		input.h		\
		lexical.c	\
		lexical.h	\
		numparse.c	\
		numparse.h	\
		std.c		\
		unixcom.c	\
		unixcom.h


INCLUDES = -I$(top_srcdir)/src/include
MAINTAINERCLEANFILES = Makefile.in
